# folio

./: 0.cvmvc.js  1.cvmvc.js  CNAME  Cargo.toml  cvmvc.js  cvmvc.wasm  index.html  package-lock.json  package.json  webpack.config.js
src/: app.rs  lib.rs  routes.rs
src/components/: about.rs  cv.rs  index.rs  mod.rs
src/data/: models.rs  store.rs
src/util/: serde.rs
src/views/: about.rs  cv.rs  projects.rs
static/: index.html  style.scss
static/libs/: _vars.scss
views/: _resume.scss
