[package]
name = "folio"
version = "0.1.0"
authors = ["Arthur Miles Burke arthur2burke@gmail.com"]
edition = "2018"

[profile.release]
# less code to include into binary
panic = 'abort'
# optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# optimization for size ( more aggressive )
opt-level = 'z'
# optimization for size
# opt-level = 's'
# link time optimization using using whole-program analysis
lto = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = "0.17"
log = "0.4"
strum = "0.18"
strum_macros = "0.18"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
wasm-bindgen = "0.2"
wasm-logger = "0.2"
yew-router = "0.14"
wee_alloc = { version = "0.4.4", optional = true }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
  'KeyboardEvent',
]
